# plant-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build-and-deploy.yml  container-app-build.yml  full-stack-deploy.yml  notify.yml  publish-routes.yml  snapshot.yml  tofu.yml
backend/: auth.js  config.js  microsoft-routes.js  package-lock.json  package.json  server.js
backend/auth/: google-routes.js  local-routes.js  microsoft-routes.js
backend/middleware/: auth.js
backend/routes/: chat.js  events.js  index.js  photos.js  plants.js  tasks.js
backend/scripts/: backfill-thumbnails.js
enclosure/: README.md  base.scad  enclosure.scad  enclosure_cadquery.py  top.scad
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
k8s/: certificate.yaml  deployment.yaml  httproute.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml  xlistenerset.yaml
pi/: .env.example  pyproject.toml
pi/scripts/: setup.sh
pi/src/plant_eye/: config.py  main.py
pi/src/plant_eye/hardware/: camera_hw.py  camera_stub.py  protocol.py  servo_hw.py  servo_stub.py
pi/src/plant_eye/routers/: camera.py  health.py  servo.py
pi/src/plant_eye/services/: camera_service.py  servo_service.py
pi/systemd/: plant-eye.service
snapshot/: generate-snapshot.js  package-lock.json  package.json
tofu/: appconfig.tf  backend.tf  db.tf  frontend.tf  keyvault.tf  main.tf  oauth.tf  outputs.tf  provider.tf  remote-state.tf  storage.tf  variables.tf
(+56 files in other folders)
